Bugfix: Server halting issue and unable to search on mobile device

--- a/web/public/style.css
+++ b/web/public/style.css
@@ -237,6 +237,7 @@ p img{
 .search{
   display: inline-block;
   padding-left: 0.4em;
+  padding-right: 0.3em;
   border: solid #cccccc 1px;
   box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
   border-radius: 7px;
